--- a/app/views/static_pages/index.html.slim
+++ b/app/views/static_pages/index.html.slim
@@ -1,5 +1,12 @@
 .row
-  .col-sm-offset-0.col-sm-4
-    = render 'shared/user_info'
-  .col-sm-offset-0.col-sm-8
-    = render 'shared/tweets'
+  .col-sm-offset-8.col-sm-3
+    h4
+      | Sign In
+    = render "devise/sessions/form"
+    = link_to "Forgot your password?", new_password_path(:user)
+.row
+  .col-sm-offset-8.col-sm-3
+    br
+    h4
+      | Create a account
+    = render "devise/registrations/form"
