--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,5 +1,5 @@
 .row
   .col-sm-offset-0.col-sm-4
-    = render 'shared/user_info', user: current_user
+    = render 'shared/user_info', user: @user
   .col-sm-offset-0.col-sm-8
     = render 'shared/tweets'
