--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,10 @@ html
           - if user_signed_in?
             ul.nav.navbar-nav.navbar-right
               li
-                = link_to(edit_user_registration_path) do
+                = link_to(users_path) do
+                  | Users
+              li
+                = link_to user_path(current_user) do
                   = "@#{current_user.username.capitalize}"
               li
                 = link_to destroy_user_session_path, data: { confirm: 'Are you certain you want sign out?' }, :method => :delete, class: "signout" do
