--- a/app/views/shared/_tweets.html.slim
+++ b/app/views/shared/_tweets.html.slim
@@ -1,15 +1,16 @@
-.page-header
-  h1
-    small.pull-right #{@tweets.count}
-    | Tweets
-- @tweets.each do |tweet|
-  .comments-list
-    .media
-      p.pull-right.history
-        small #{tweet.created_at}
-      a.media-left href="#"
-        img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/ce54bf11889067.562541ef7cde4.png" /
-      .media-body
-        h4.media-heading.user_name #{tweet.user.username}
-        | #{tweet.body}
-  br
+.main-box.no-header.clearfix
+  .main-box-body.clearfix
+    .table-responsive
+      table.table
+        - @tweets.each do |tweet|
+          tbody
+            tr
+              td
+                p.pull-right.history
+                  small #{time_ago_in_words(tweet.created_at)}
+                a.media-left href="#"
+                  img src="http://bootdey.com/img/Content/user_#{rand(3)}.jpg" /
+                .media-body
+                  h4.media-heading.user_name
+                    =link_to "#{tweet.user.username}", user_path(tweet.user)
+                  | #{tweet.body}
