--- a/app/views/devise/registrations/_form.html.slim
+++ b/app/views/devise/registrations/_form.html.slim
@@ -1,11 +1,15 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   .form-group
+    = f.label :email, class: 'hidden'
     = f.text_field :email, class: "form-control", placeholder: "Email"
   .form-group
+    = f.label :username, class: 'hidden'
     = f.text_field :username, class: "form-control", placeholder: "Username"
   .form-group
+    = f.label :password, class: 'hidden'
     = f.password_field :password, class: "form-control", placeholder: "Password"
   .form-group
+    = f.label :password_confirmation, class: 'hidden'
     = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
   .form-group
     = f.submit 'Sign up', class: "btn btn-warning"
