--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,4 +2,6 @@
   .col-sm-offset-0.col-sm-4
     = render 'shared/user_info', user: @user
   .col-sm-offset-0.col-sm-8
-    = render 'shared/tweets'
+    = render "shared/tweet_form", user: current_user if @user == current_user
+    .tweets
+    = render @user.tweets.order("created_at DESC")
