--- a/app/views/shared/_tweet_form.html.slim
+++ b/app/views/shared/_tweet_form.html.slim
@@ -1,7 +1,8 @@
-= form_for [user, @tweet], remote: true, id: "form_#{user.id}" do |f|
-  fieldset
-    = f.label :body, class: 'hidden'
-    = f.text_area :body, class: "form-control", placeholder: "Type tweet", rows: 3
-  button.btn.btn-info.btn-block.btn-xs.tweet-button[type="submit"]
-    | Tweet
+.tweet_form
+  = form_for [user, @tweet], remote: true, id: "form_#{user.id}" do |f|
+    fieldset
+      = f.label :body, class: 'hidden'
+      = f.text_area :body, class: "form-control", placeholder: "Type tweet", rows: 3
+    button.btn.btn-info.btn-block.btn-xs.tweet-button[type="submit"]
+      | Tweet
 .tweet-errors
