--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,4 +2,4 @@
   .col-sm-offset-0.col-sm-4
     = render 'shared/user_info', user: current_user
   .col-sm-offset-0.col-sm-6
-    = render "shared/users_list", users: @users
+    = render("shared/users_list", users: @users) || "No Tweets"
