--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,4 +4,4 @@
   .col-sm-offset-0.col-sm-8
     = render "shared/tweet_form", user: current_user if @user == current_user
     .tweets
-    = render @user.tweets.order("created_at DESC")
+    = render(@user.tweets.order("created_at DESC")) || "No Tweets"
