add pagination infinite scroll

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,10 @@
   display: none;
   }
 
+  .bottom-indent {
+    margin-bottom: 100px;
+  }
+
   .tweet-button {
     margin-top: 3px;
     margin-bottom: 3px
