--- a/app/views/users/timeline.html.slim
+++ b/app/views/users/timeline.html.slim
@@ -2,10 +2,10 @@
   .col-sm-offset-0.col-sm-4
     = render 'shared/user_info', user: current_user
   .col-sm-offset-0.col-sm-8
-    = render "shared/tweet_form", user: @user
+    = render "shared/tweet_form", user: current_user if @user == current_user
     .tweets
-      = render @tweets
+    = render @tweets
     .paginate
-    = link_to 'Load More Tweets', timeline_user_path(@user, :page => @tweets.next_page), :class => 'load-more-tweets btn btn-info btn-block', :remote => true if @tweets.next_page
-    a href="#" class="scrollToTop" 
+      = link_to 'Load More Tweets', timeline_user_path(@user, :page => @tweets.next_page), :class => 'load-more-tweets btn btn-info btn-block', :remote => true if @tweets.next_page
+    a href="#" class="scrollToTop"
     .bottom-indent
