--- a/app/views/users/followers.html.slim
+++ b/app/views/users/followers.html.slim
@@ -2,4 +2,9 @@
   .col-sm-offset-0.col-sm-4
     = render 'shared/user_info', user: @user
   .col-sm-offset-0.col-sm-8
-    = render "shared/users_list", users: @followers 
+    = render  @users
+    .users
+    .paginate
+      = link_to 'Load More Users', followers_user_path(:page => @users.next_page), :class => 'load-more-users btn btn-info btn-block', :remote => true if @users.next_page
+    a href="#" class="scrollToTop"
+    .bottom-indent
