--- a/app/views/shared/_user_info.html.slim
+++ b/app/views/shared/_user_info.html.slim
@@ -2,8 +2,8 @@
   a.twPc-bg.twPc-block
   div
     .twPc-button
-      - if @user != current_user
-        = render "shared/follow", user: @user
+      - if user != current_user
+        = render "shared/follow", user: user
     a.twPc-avatarLink href="#{user_path(user)}" title=("#{user.username}")
       img.twPc-avatarImg alt=("#{user.username}") src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/ce54bf11889067.562541ef7cde4.png" /
     .twPc-divUser
@@ -22,8 +22,8 @@
         li.twPc-ArrangeSizeFit
           = link_to(following_user_path(user)) do
               span.twPc-StatLabel.twPc-block Following
-              span.twPc-StatValue id="following-count_#{@user.id}" #{user.following.count}
+              span.twPc-StatValue id="following-count_#{user.id}" #{user.following.count}
         li.twPc-ArrangeSizeFit
           = link_to(followers_user_path(user)) do
             span.twPc-StatLabel.twPc-block Followers
-            span.twPc-StatValue id="followers-count_#{@user.id}" #{user.followers.count}
+            span.twPc-StatValue id="followers-count_#{user.id}" #{user.followers.count}
