--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
                   | Users
               li
                 = link_to user_path(current_user) do
-                  = "@#{current_user.username.capitalize}"
+                  = "@#{current_user.username}"
               li
                 = link_to destroy_user_session_path, data: { confirm: 'Are you certain you want sign out?' }, :method => :delete, class: "signout" do
                   span.glyphicon.glyphicon-log-out
